<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="false"
        android:hint="@string/fakeHint"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="end" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.9">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#DD2C00"
                android:onClick="@string/clear"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#FF7700" />

            <Button
                android:id="@+id/parentheses"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/parentheses"
                android:text="@string/parentheses"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/exponent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/percent"
                android:text="@string/percent"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/divide"
                android:text="@string/divide"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/seven"
                android:text="@string/seven"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/eight"
                android:text="@string/eight"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/nine"
                android:text="@string/nine"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/multiply"
                android:text="@string/multiply"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/four"
                android:text="@string/four"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/five"
                android:text="@string/five"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/six"
                android:text="@string/six"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/subtract"
                android:text="@string/subtract"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/one"
                android:text="@string/one"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/two"
                android:text="@string/two"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/three"
                android:text="@string/three"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/add"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/plusMinus"
                android:text="@string/plusMinus"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="@string/zero"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/point"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/point"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#3E4B51" />

            <Button
                android:id="@+id/equals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#43A047"
                android:onClick="@string/equals"
                android:text="@string/equals"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#8BC34A" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/backspace"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/circle"
        android:onClick="@string/backspace"
        android:text="@string/backspace"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/historybtn"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/circle"
        android:onClick="@string/history"
        android:text="@string/history"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.94" />



</androidx.constraintlayout.widget.ConstraintLayout>